--- a/package.json
+++ b/package.json
@@ -11,17 +11,29 @@
   "dependencies": {
     "@astrojs/netlify": "^6.2.5",
     "@astrojs/react": "^4.2.3",
+    "@portabletext/react": "^3.2.1",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@sanity/astro": "^3.2.6",
     "@sanity/client": "^6.28.4",
-    "@sanity/orderable-document-list": "^1.3.3",
+    "@sanity/orderable-document-list": "^1.3.2",
     "@sanity/vision": "^3.82.0",
+    "@tailwindcss/vite": "^4.1.2",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "astro": "^5.5.6",
+    "astro-font": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
     "sanity": "^3.82.0",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "tailwind-merge": "^3.1.0",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.1.2",
+    "tw-animate-css": "^1.2.5"
   }
 }
